--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 body {
   margin: 0 auto;
   font-family: 'Oswald', sans-serif;
-  background-color:#990033;
+ background-image: url('../images/backgroundtable.jpg');
 
 }
 
